# playground

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: common.hpp.F5C88A33A2513869.idx  cublas_handle.hpp.ADF6792071F1D0E9.idx  main.cpp.7B05CCFB7B8D934D.idx  matmul.hpp.2C46F01AA9B3A302.idx  matmul_f16_v0_cblas.cpp.93E7A175DEBBE677.idx  matmul_f16_v10_wmma_tile_mma4x2_warp2x4_async_copy.cu.7D94B57A7BDF153F.idx  matmul_f16_v11_wmma_tile_mma4x2_warp2x4_pad_stage.cu.F6CA14BA0CF15F7C.idx  matmul_f16_v12_wmma_tile_mma4x4_warp_4x4_dsmem.cu.D75D3D9B8BF0DD06.idx  matmul_f16_v13_wmma_tile_mma4x4_warp4x4.cu.3B323FB6C8703F0C.idx  matmul_f16_v14_wmma_v13+3buffer&4buffer.cu.1AF1268998DF5810.idx  matmul_f16_v15_mma_naive.cu.842505B7DB31F942.idx  matmul_f16_v16_mma_stage_v0.cu.82572D063B48A8B9.idx  matmul_f16_v16_mma_stage_v1.cu.B1078FCEC7D04259.idx  matmul_f16_v17_mma_stage_tn.cu.9FE926704DA8D200.idx  matmul_f16_v18_mma_4stage_v2.cu.59BC0EEE3AE49753.idx  matmul_f16_v19_4stage_v3.cu.7C0E46D603C47D88.idx  matmul_f16_v1_tensor-core.cu.42C48D29ECCF068E.idx  matmul_f16_v2_naive.cu.F145C3B9307220A4.idx  matmul_f16_v3_naive_BM_TM.cu.51FBD3714244273D.idx  matmul_f16_v4_naive_BM_TM_without_bank_conflict.cu.2558059289AC381F.idx  matmul_f16_v5_wmma_naive.cu.67C1A407CDE8D9F7.idx  matmul_f16_v6_wmma_tile_mma4x2.cu.166CF17A6F6D0EB9.idx  matmul_f32_v0_cblas.cpp.AA8A5DACD92F3A11.idx  (+13 more)
.github/workflows/: ci-auto-format-and-commit.yml
docs/scripts/: build-task1-help.txt
scripts/: build-task1.sh  format.sh  nsight-profile.sh
task-1/: .clang-format  .gitignore  CMakeLists.txt  Compiler.cmake  Libraries.cmake  MMult_ref.cpp  MMult_ref.cu  MMult_t_v0.cu  MMult_v0.cu  Makefile  README.md  ReadMe.md  benchmark_cublas_use_torch.py  comp_mat.cpp  gen_mat.cu  get_device_properties.cu  lab_device_properties.txt  parameters.h  test_cuBLAS_cudacore_fp32.cu  test_cuBLAS_tensorcore_fp16.cu  test_fp16.cu  test_fp32.cu  tran_mat.cu  vcpkg.json
task-1/cmake/: Compiler.cmake  Libraries.cmake  Macros.cmake
task-1/cmake/compilers/: cuda-compiler-configs.cmake  cxx-compiler-configs.cmake
task-1/cmake/libraries/: libcuda.cmake  libopenblas.cmake
task-1/cmake/utils/: common.cmake  logging.cmake
task-1/include/: parameters.hpp
task-1/include/playground/: common.hpp  cublas_handle.hpp  matmul.hpp  parameters.hpp  static.hpp  system.hpp  test_data.hpp  utills.cuh  utils.hpp
task-1/include/playground/utils/: address.hpp  mat.hpp
task-1/scripts/: build.sh
task-1/src/: CMakeLists.txt  main.cpp  main.cu
task-1/src/matmul_f16/: matmul_f16_v0_cblas.cpp  matmul_f16_v10_wmma_tile_mma4x2_warp2x4_async_copy.cu  matmul_f16_v10_wmma_tile_mma4x2_warp2x4_ptx.cu  matmul_f16_v11_wmma_tile_mma4x2_warp2x4_pad_stage.cu  matmul_f16_v11_wmma_tile_mma4x2_warp2x4_pad_stages.cu  matmul_f16_v12_wmma_tile_mma4x4_warp_4x4_dsmem.cu  matmul_f16_v13_wmma_tile_mma4x4_warp4x4.cu  matmul_f16_v14_wmma_v13+3buffer&4buffer.cu  matmul_f16_v15_mma_naive.cu  matmul_f16_v16_mma_stage_v0.cu  matmul_f16_v16_mma_stage_v1.cu  matmul_f16_v17_mma_stage_tn.cu  matmul_f16_v18_mma_4stage_v2.cu  matmul_f16_v19_4stage_v3.cu  matmul_f16_v1_cuda-core.cu  matmul_f16_v1_tensor-core.cu  matmul_f16_v1_wmma_naive.cu  matmul_f16_v2.cu  matmul_f16_v2_naive.cu  matmul_f16_v2_wmma_naive.cu  matmul_f16_v3_naive_BM_TM.cu  matmul_f16_v3_shared_memory.cu  matmul_f16_v4_naive_BM_TM_without_bank_conflict.cu  matmul_f16_v4_shared_memory_mult_data.cu  matmul_f16_v5_shared_memory_float4.cu  matmul_f16_v5_wmma_naive.cu  matmul_f16_v6_wmma_tile_mma4x2.cu  matmul_f16_v7_wmma_tile_mma4x2_warp2x4.cu  matmul_f16_v8_wmma_tile_mma4x2_warp2x4_double_buffer.cu  matmul_f16_v9_wmma_tile_mma4x2_warp2x4_double_buffer_v2.cu
task-1/src/matmul_f32/: matmul_f32_v0_cblas.cpp  matmul_f32_v1_cuda-core.cu  matmul_f32_v1_tensor-core.cu  matmul_f32_v2.cu  matmul_f32_v2_naive.cu  matmul_f32_v3_shared_memory.cu  matmul_f32_v4_shared_memory_mult_data.cu  matmul_f32_v5_BM.cu  matmul_f32_v6_BM_without_bank_conflict copy.cu  matmul_f32_v7_BM_double_buffer.cu
